<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/paint_surface"
    android:padding="@dimen/screen_padding">

    <TextView
        android:id="@+id/referenceTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reference_title"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        android:textColor="@color/paint_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/referenceSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_xs"
        android:text="@string/reference_subtitle"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/referenceTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/referenceQueryLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/screen_padding"
        app:layout_constraintEnd_toStartOf="@id/searchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/referenceSubtitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/referenceQueryInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reference_query_hint"
            android:imeOptions="actionSearch"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reference_search"
        app:layout_constraintBottom_toBottomOf="@id/referenceQueryLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/referenceQueryLayout" />

    <ProgressBar
        android:id="@+id/referenceProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/referenceQueryLayout" />

    <TextView
        android:id="@+id/referenceEmptyView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/reference_empty_start"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/referenceQueryLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/referenceRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/screen_padding"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/section_spacing"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/referenceQueryLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
